@@ -1,6 +1,7 @@
 mkdocs-material-0.x.x (2016-xx-xx)
 
-  * Fixed #2: Ordered lists within an unordered list have ::before content
+  * Fixed #3: Ordered lists within an unordered list have ::before content
+  * Moved Modernizr to top to ensure basic usability in IE8
 
 mkdocs-material-0.1.2 (2016-02-16)
 
